editing header links

--- a/colmar.html
+++ b/colmar.html
@@ -7,20 +7,16 @@
         <title>Colmar Academy</title>
     </head>
     <!--Header: Logo and Nav Links-->
-    <header>
-        <div class="left">
-            <p class="colmar">Colmar</p><p class="academy">Academy</p>
-        </div>
-        <div class="right">
-            <nav>
-                <ul>
-                    <li><a href="#">On Campus</a></li>
-                    <li><a href="#">Online</a></li>
-                    <li><a href="#">For Companies</a></li>
-                    <li><a href="#">Sign In</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header class="flex-header">
+        <p class="colmar">Colmar</p><p class="academy">Academy</p>
+        <nav>
+            <ul>
+                <li><a href="#">On Campus</a></li>
+                <li><a href="#">Online</a></li>
+                <li><a href="#">For Companies</a></li>
+                <li><a href="#">Sign In</a></li>
+            </ul>
+        </nav>
     </header>
     <!--Main Content-->
     <main>
