create new classes

--- a/colmar.html
+++ b/colmar.html
@@ -7,10 +7,10 @@
         <title>Colmar Academy</title>
     </head>
     <!--Header: Logo and Nav Links-->
-    <header class="flex-header">
-        <p class="colmar">Colmar</p><p class="academy">Academy</p>
-        <nav>
-            <ul>
+    <header class="main-header">
+        <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/ic-logo.svg" alt="Colmar Logo">Colmar Academy
+        <nav class="header-nav">
+            <ul class="header-list">
                 <li><a href="#">On Campus</a></li>
                 <li><a href="#">Online</a></li>
                 <li><a href="#">For Companies</a></li>
