testing style changes

--- a/colmar.html
+++ b/colmar.html
@@ -8,7 +8,7 @@
     </head>
     <!--Header: Logo and Nav Links-->
     <header class="main-header">
-        <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/ic-logo.svg" alt="Colmar Logo">Colmar Academy
+        <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/ic-logo.svg" alt="Colmar Logo"><p>Colmar Academy</p>
         <nav class="header-nav">
             <ul class="header-list">
                 <li><a href="#">On Campus</a></li>
