re-work right nav

--- a/colmar.html
+++ b/colmar.html
@@ -11,10 +11,12 @@
         <div class="navcontainer">
             <nav class="fixednav">
                 <div class="leftnav"><img src="./resources/css/capston_colmar_assets/capstone_colmar_assets/images/ic-logo.svg" alt="Colmar"><p class="colmar">Colmar</p><p class="academy">Academy</p></div>
-                <div class="rightnav"><a href="#">On Campus</a></div>
-                <div class="rightnav"><a href="#">Online</a></div>
-                <div class="rightnav"><a href="#">For Companies</a></div>
-                <div class="rightnav"><a href="#">Sign In</a></div>
+                <ul class="rightnav">
+                    <li><a href="#">On Campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">For Companies</a></li>
+                    <li><a href="#">Sign In</a></li>
+                </ul>
             </nav>
         </div>
     </header>
