Started adding main content

--- a/colmar.html
+++ b/colmar.html
@@ -22,6 +22,11 @@
     </header>
     <!--Main Content-->
     <main>
-
+        <div class="learn">
+            <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/banner.jpg" alt="Students studying" class="banner">
+            <h1>Learn something<br> new everyday</h1>
+            <br>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        </div>
     </main>
 </html>
