Edit first main content section

--- a/colmar.html
+++ b/colmar.html
@@ -24,9 +24,7 @@
     <main>
         <div class="learn">
             <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/banner.jpg" alt="Students studying" class="banner">
-            <h1>Learn something<br> new everyday</h1>
-            <br>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <p><span class="everyday">Learn something<br> new everyday</span><br><br><span class="lorem">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</span></p>
         </div>
     </main>
 </html>
