Style banner section and add button

--- a/colmar.html
+++ b/colmar.html
@@ -25,6 +25,7 @@
         <div class="learn">
             <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/banner.jpg" alt="Students studying" class="banner">
             <p><span class="everyday">Learn something<br> new everyday</span><br><br><span class="lorem">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</span></p>
+            <button class="start"><a href="#">Start Here</a></button>
         </div>
     </main>
 </html>
