Completed banner section

--- a/colmar.html
+++ b/colmar.html
@@ -24,8 +24,13 @@
     <main>
         <div class="learn">
             <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/banner.jpg" alt="Students studying" class="banner">
-            <p><span class="everyday">Learn something<br> new everyday</span><br><br><span class="lorem">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</span></p>
-            <button class="start"><a href="#">Start Here</a></button>
+            <p>
+                <span class="everyday">Learn something<br> new everyday</span><br><br><span class="lorem">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</span>
+                <br>
+                <br>
+                <br>
+                <a href="#"><button class="start" type="button">Start Here</button></a>
+            </p>
         </div>
     </main>
 </html>
