Start adding next section

--- a/colmar.html
+++ b/colmar.html
@@ -32,5 +32,29 @@
                 <a href="#"><button class="start" type="button">Start Here</button></a>
             </p>
         </div>
+        <div class="practice">
+            <div class="left">
+                <img src="resources/css/capston_colmar_assets/capstone_colmar_assets/images/information-main.jpg" alt="Man studying">
+                <p class="practicing">It doesn't hurt to keep practicing
+                <br>
+                <br>
+                <q class="quote">Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br> nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br> eget magna laoreet, efficitur dolor consequat, tristique ligula.</q>
+                </p>
+                <p class="credit">
+                Emanuel, Sr Strategist at Hiring.com
+                </p>
+            </div>
+            <div class="right">
+                <div class="rightone">
+                    <p>this is grid one</p>
+                </div>
+                <div class="righttwo">
+                    <p>this is grid two</p>
+                </div>
+                <div class="rightthree">
+                    <p>this is grid three</p>
+                </div>
+            </div>
+        </div>
     </main>
 </html>
